--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,7 @@ install:
   - python setup.py install
 
 script:
+  - pip install flake8
+  - flake8 py3dtiles --exclude __init__.py
   - nosetests
   - py3dtiles_info tests/pointCloudRGB.pnts
