Activate flake8 on __init__.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ install:
 
 script:
   - pip install flake8
-  - flake8 py3dtiles --exclude __init__.py
+  - flake8 py3dtiles
   - nosetests
   - py3dtiles_info tests/pointCloudRGB.pnts
