--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 sudo: required
-dist: trusty
+dist: bionic
 
 language: python
 python:
-  - "3.5"
+  - "3.6"
 
 before_install:
+  - sudo add-apt-repository universe
   - sudo apt-get install -y liblas-c3 libopenblas-base
 
 install:
