--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,5 @@ indent_size = 4
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
-insert_final_newline = true
+insert_final_newline = false
 
