--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 
 install:
   - pip install -e .
-  - pip install pytest pytest-benchmark
+  - pip install -e .[dev]
 
 script:
   - pytest
